fix: too much header on landing page

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -26,10 +26,6 @@
   background-size: 4px 4px;
 }
 
-.pixel-main {
-  padding-top: 4.5rem;
-}
-
 .tone-primary {
   --tone-color: var(--pixel-primary);
 }
